gateway.yaml
➜  assignment12 git:(main) ✗ vi cert.yaml                                            (shoot--eureka--uat/default)
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: httpserver-gw
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - httpserver.test.io
    port:
      name: https-default
      number: 443
      protocol: HTTPS
    tls:
      credentialName: httpserver
      mode: SIMPLE
