virtualService.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpserver
  namespace: httpserver
spec:
  gateways:
  - httpserver-gw
  hosts:
  - httpserver.test.io
  http:
  - route:
    - destination:
        host: httpserver.httpserver.svc.cluster.local
        port:
          number: 8080
